--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "url": "https://github.com/Huddly/device-api-usb/issues"
   },
   "dependencies": {
-    "@huddly/sdk": "^0.0.3",
+    "@huddly/sdk": "^0.0.4",
     "@types/node": "^10.12.12",
     "global": "^4.3.2",
     "msgpack-lite": "^0.1.26",
@@ -57,6 +57,8 @@
   "devDependencies": {
     "@types/mocha": "^5.2.5",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-things": "^0.2.0",
     "mocha": "^5.2.0",
     "sinon": "^7.0.0",
     "sinon-chai": "^3.2.0",
