Added licence and made package.json public

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "Device",
     "Discovery"
   ],
-  "author": "Brikend Rama <brikend@huddly.com>",
+  "author": "Huddly AS <npm@huddly.com>",
   "homepage": "http://developer.huddly.com",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "main": "./lib/src/index.js",
   "types": "./lib/src/index.d.ts",
   "directories": {
@@ -27,7 +27,7 @@
   ],
   "publishConfig": {
     "registry": "http://registry.npmjs.org/",
-    "access": "restricted"
+    "access": "public"
   },
   "repository": {
     "type": "git",
