--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "publish-package": "npm run build && npm publish",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "test": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
-    "test-ts": "mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\""
+    "test": "mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\"",
+    "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\""
   },
   "bugs": {
     "url": "https://github.com/Huddly/device-api-usb/issues"
