--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
+
 node_js:
   - "8.9.4"
-cache: yarn
+
 script:
-  - yarn build
-  - yarn test-js
+  - npm run build
 os:
   - linux
   - osx
+  - windows
