--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "url": "git+https://github.com/Huddly/device-api-usb.git"
   },
   "scripts": {
-    "build": "npm run build-ts && npm run tslint && npm run test",
+    "build": "npm run build-ts && npm run tslint && npm run napi && cp -r prebuilds lib",
     "build-ts": "tsc --declaration",
     "publish-package": "npm run build && npm publish",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --check-leaks",
-    "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\""
+    "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\"",
+    "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
+    "napi": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6 ",
+    "install": "echo 'install without build'"
   },
   "nyc": {
     "include": [
@@ -71,9 +73,11 @@
     "msgpack-lite": "^0.1.26",
     "p-queue": "^3.0.0",
     "typescript": "^3.2.1",
-    "usb": "https://huddlysoftware.blob.core.windows.net/node-usb/nodeusb-prod-1.5.3.tar.gz"
+    "await-sleep": "0.0.1",
+    "node-addon-api": "^1.6.2"
   },
   "devDependencies": {
+    "node-gyp-build": "^3.8.0",
     "@types/mocha": "^5.2.5",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -84,6 +88,9 @@
     "sinon-chai": "^3.2.0",
     "source-map-support": "^0.5.9",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0"
+    "tslint": "^5.11.0",
+    "node-gyp": "^3.8.0",
+    "npm-run": "^4.1.0",
+    "prebuildify": "^2.11.0"
   }
 }
