--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\"",
     "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
     "napi": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@2.0.3 ",
-    "install": "./node_modules/.bin/node-gyp-build",
-    "postinstall": "ln -s prebuilds lib/prebuilds"
+    "install": "./node_modules/.bin/node-gyp-build"
   },
   "nyc": {
     "include": [
