--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --exit",
     "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
     "napi": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6 ",
-    "install": "echo 'install without build'"
+    "install": "echo 'install without build'",
+    "prepare": "npm run build-ts",
+    "preversion": "npm run tslint"
   },
   "nyc": {
     "include": [
