--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "publish-package": "npm run build && npm publish",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\"",
+    "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --exit",
     "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
     "napi": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6 ",
     "install": "echo 'install without build'"
