--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "url": "https://github.com/Huddly/device-api-usb/issues"
   },
   "dependencies": {
-    "@huddly/sdk": "^0.1.13",
+    "@huddly/sdk": "~0.2.1",
     "@types/node": "^11.9.0",
     "global": "^4.3.2",
     "msgpack-lite": "^0.1.26",
