--- a/package.json
+++ b/package.json
@@ -71,12 +71,9 @@
   "dependencies": {
     "@huddly/sdk": "^0.2.1",
     "@types/node": "^11.9.0",
-    "global": "^4.3.2",
-    "msgpack-lite": "^0.1.26",
-    "p-queue": "^3.0.0",
-    "typescript": "^3.2.1",
     "await-sleep": "0.0.1",
-    "node-addon-api": "^1.6.2"
+    "node-addon-api": "^1.6.2",
+    "typescript": "^3.2.1"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
