--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "@types/node": "^11.13.0",
     "await-sleep": "0.0.1",
     "node-addon-api": "^1.6.2",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.1",
+    "node-gyp-build": "^3.8.0"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
@@ -82,7 +83,6 @@
     "chai-things": "^0.2.0",
     "mocha": "^6.0.0",
     "node-gyp": "^3.8.0",
-    "node-gyp-build": "^3.8.0",
     "nyc": "^13.1.0",
     "prebuildify": "^2.11.0",
     "sinon": "^7.3.1",
