--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
     "napi": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6 ",
     "install": "echo 'install without build'",
-    "prepare": "npm run build-ts",
+    "prepare": "npm run build",
     "preversion": "npm run tslint"
   },
   "nyc": {
