--- a/package.json
+++ b/package.json
@@ -42,9 +42,16 @@
     "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --exit",
     "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
     "napi": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6 ",
+    "upload": "",
     "install": "echo 'install without build'",
     "prepare": "npm run build-ts",
     "preversion": "npm run tslint"
+  },
+  "binary": {
+    "builtVersions": [
+      "electron-napi",
+      "node-napi"
+    ]
   },
   "nyc": {
     "include": [
