--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "files": [
     "lib",
+    "manifest.json",
     "README.md"
   ],
   "publishConfig": {
@@ -34,21 +35,24 @@
     "url": "git+https://github.com/Huddly/device-api-usb.git"
   },
   "scripts": {
-    "build": "npm run build-ts && npm run tslint && npm run napi && cp -r prebuilds lib",
+    "build": "npm run build-ts && npm run tslint && npm run napi",
     "build-ts": "tsc --declaration",
-    "publish-package": "npm run build && npm publish",
+    "publish-package": "npm run build && npm run manifest && npm publish",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --exit",
     "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
-    "napi": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6 ",
+    "napi": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6",
+    "napi-64": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6 --arch=x64",
+    "napi-32": "prebuildify --napi --strip --verbose --target=node@10.12.0 --target=electron@3.1.6 --arch=ia32",
     "upload-build": "node scripts/release-current-platform",
     "install": "echo 'install without build'",
+    "postinstall": "node scripts/download-binaries.js",
     "prepare": "npm run build-ts",
     "preversion": "npm run tslint",
     "prettier": "./node_modules/.bin/prettier  --config ./.prettierrc --write src/**/*.ts",
     "prettier-check": "./node_modules/.bin/prettier  --config ./.prettierrc --check src/**/*.ts",
-    "commit": "git-cz"
+    "manifest": "PROD_MANIFEST=true node scripts/generate-manifest.js"
   },
   "pre-commit": [
     "prettier-check",
@@ -58,9 +62,10 @@
   ],
   "binary": {
     "builtVersions": [
-      "electron-napi",
-      "node-napi"
-    ]
+      "electron.napi",
+      "node.napi"
+    ],
+    "host": "https://deviceapiusb.blob.core.windows.net/device-api-usb/"
   },
   "nyc": {
     "include": [
