--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "preversion": "npm run tslint",
     "prettier": "./node_modules/.bin/prettier  --config ./.prettierrc --write src/**/*.ts",
     "prettier-check": "./node_modules/.bin/prettier  --config ./.prettierrc --check src/**/*.ts",
-    "manifest": "PROD_MANIFEST=true node scripts/generate-manifest.js"
+    "manifest": "PROD_MANIFEST=true node scripts/generate-manifest.js",
+    "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'Updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
+    "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'Updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
+    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'Updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags"
   },
   "pre-commit": [
     "prettier-check",
@@ -107,6 +110,7 @@
     "commitizen": "^3.1.1",
     "copyfiles": "^2.1.0",
     "cz-conventional-changelog": "^2.1.0",
+    "generate-changelog": "^1.8.0",
     "mocha": "^6.1.4",
     "node-gyp": "^4.0.0",
     "nyc": "^14.0.0",
