--- a/package.json
+++ b/package.json
@@ -88,9 +88,10 @@
     "@huddly/sdk": "^0.3.1",
     "@types/node": "^12.0.0",
     "await-sleep": "0.0.1",
+    "lodash.throttle": "^4.1.1",
     "node-addon-api": "^1.6.2",
-    "typescript": "^3.4.1",
-    "node-gyp-build": "^4.0.0"
+    "node-gyp-build": "^4.0.0",
+    "typescript": "^3.4.1"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
