--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 
+node_js:
+  - "11.5.0"
+  - "12.4.0"
+
 script:
   - npm run build
   - npm run test
@@ -14,7 +18,6 @@ matrix:
   include:
     - os: linux
       dist: xenial
-      node_js: "11.5.0"
       before_install:
         - sudo add-apt-repository --yes ppa:jonathonf/gcc-8.1
         - sudo apt-get update
@@ -22,4 +25,3 @@ matrix:
         - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 60
     - os: osx
       osx_image: xcode10.1
-      node_js: "11.5.0"
