--- a/package.json
+++ b/package.json
@@ -95,35 +95,34 @@
   },
   "dependencies": {
     "@huddly/sdk": "^0.4.1",
-    "@types/node": "^12.7.4",
+    "@types/node": "^12.12.22",
     "await-sleep": "0.0.1",
     "lodash.throttle": "^4.1.1",
     "node-addon-api": "^1.7.1",
-    "typescript": "^3.4.1",
-    "node-gyp-build": "^4.0.0"
+    "node-gyp-build": "^4.2.0",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.5",
+    "@types/mocha": "^5.2.7",
     "azure-storage": "^2.10.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
-    "commitizen": "^3.1.1",
-    "copyfiles": "^2.1.0",
+    "copyfiles": "^2.1.1",
     "cz-conventional-changelog": "^2.1.0",
     "generate-changelog": "^1.8.0",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.2",
     "node-gyp": "^4.0.0",
-    "nyc": "^14.0.0",
+    "nyc": "^14.1.1",
     "pre-commit": "^1.2.2",
-    "prebuildify": "^3.0.0",
-    "prettier": "^1.17.1",
-    "sinon": "^7.3.1",
-    "sinon-chai": "^3.2.0",
-    "source-map-support": "^0.5.9",
-    "tar": "^4.4.8",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.15.0"
+    "prebuildify": "^3.0.4",
+    "prettier": "^1.19.1",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.4.0",
+    "source-map-support": "^0.5.16",
+    "tar": "^4.4.13",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1"
   },
   "config": {
     "commitizen": {
