--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "libusb"]
+[submodule "libusb_upstream"]
 	path = libusb
-	url = https://github.com/jontore/libusb.git
-	branch = bugfix/darwin/libusb_interface_enumerator
+	url = https://github.com/libusb/libusb.git
