--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "publish-package": "npm run build && npm run manifest && npm publish",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --exit",
-    "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
+    "test": "nyc mocha -r ts-node/register --config tests/setup.js --recursive \"tests/**/*.spec.ts\" --exit",
+    "test-js": "mocha -r ts-node/register --config tests/setup.js --recursive \"lib/tests/**/*.spec.js\"",
     "napi": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=electron@3.1.6 --target=electron@4.2.12",
     "napi-64": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=electron@3.1.6 --target=electron@4.2.12 --arch=x64",
     "napi-32": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=electron@3.1.6 --target=electron@4.2.12 --arch=ia32",
