--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
       dist: xenial
       node_js: "11.5.0"
       before_install:
-        - sudo add-apt-repository --yes ppa:jonathonf/gcc-8.1
-        - sudo apt-get update
+        - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        - sudo apt update
         - sudo apt-get install -y gcc-8 g++-8
         - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 60
     - os: osx
@@ -27,7 +27,7 @@ matrix:
       dist: xenial
       node_js: "12.4.0"
       before_install:
-        - sudo add-apt-repository --yes ppa:jonathonf/gcc-8.1
+        - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
         - sudo apt-get update
         - sudo apt-get install -y gcc-8 g++-8
         - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 60
