build(windows bin): do only upload bin from win build since tar.gz is built and deployed by travis

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "napi-64": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=node@14.15.4 --target=electron@11.2.1 --target=electron@3.1.6 --target=electron@4.2.12 --arch=x64",
     "napi-32": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=node@14.15.4 --target=electron@11.2.1 --target=electron@3.1.6 --target=electron@4.2.12 --arch=ia32",
     "upload-build": "node scripts/release-current-platform",
+    "upload-binaries": "cross-env SKIP_TAR=true node scripts/release-current-platform",
     "install": "echo 'install without build'",
     "postinstall": "node scripts/download-binaries.js",
     "prepare": "npm run build-ts",
@@ -109,6 +110,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
     "copyfiles": "^2.1.1",
+    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "generate-changelog": "^1.8.0",
     "mocha": "^7.1.1",
