--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,14 @@ matrix:
     - os: osx
       osx_image: xcode10.1
       node_js: "12.4.0"
+    - os: linux
+      dist: xenial
+      node_js: "14.17.3"
+      before_install:
+        - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        - sudo apt-get update
+        - sudo apt-get install -y gcc-8 g++-8
+        - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 60
+    - os: osx
+      osx_image: xcode10.1
+      node_js: "14.17.3"
