--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "README.md"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org/",
+    "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
   "repository": {
