--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,9 +44,15 @@ jobs:
           submodules: recursive
 
       - name: Set env
+        shell: bash
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
+      - name: Test ref
+        shell: bash
+        run: echo ${{github.ref}}
+
       - name: Test
+        if: startsWith(github.ref, 'refs/tags/v')
         env:
           TAG: ${{ env.RELEASE_VERSION }}
         shell: bash
