--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,21 +43,26 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Set env
+      - name: "Extract RELEASE_VERSION"
         shell: bash
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-
-      - name: Test ref
-        shell: bash
-        run: echo ${{github.ref}}
+        run: |
+          export REF="${{github.ref}}"
+          export GITSHA=$(git log --pretty=format:'%H' -n 1 .)
+          echo "RELEASE_VERSION=${REF#refs/*/}" >> $GITHUB_ENV
+          echo "GITSHA=${GITSHA}" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=${REF#refs/*/}"
+          echo $RELEASE_VERSION
+          echo $GITSHA
 
       - name: Test
         if: startsWith(github.ref, 'refs/tags/v')
         env:
           TAG: ${{ env.RELEASE_VERSION }}
+          GITSHA: ${{ env.GITSHA }}
         shell: bash
         run: |
           echo "Tag is ${TAG}"
+          echo "LONG SHA ${GITSHA}"
 
       - name: "Pre-Install hook Ubuntu"
         if: matrix.os == 'ubuntu-latest'
