--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [
-          ubuntu-latest,
+          ubuntu-18.04,
           macos-latest,
           windows-latest
         ]
@@ -48,7 +48,7 @@ jobs:
           submodules: recursive
 
       - name: "Pre-Install hook Ubuntu"
-        if: matrix.os == 'ubuntu-latest'
+        if: matrix.os == 'ubuntu-18.04'
         run: |
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt update
