--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,8 +71,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: "Build & Test (Windows)"
-        if: matrix.os == 'windows-latest'
+      - name: "Build (Win)"
+        if: matrix.os == 'windows-latest' && matrix.node-version >= 14
         run: |
           npm --add-python-to-path='true' --debug --global --production windows-build-tools
           npm ci
@@ -80,6 +80,20 @@ jobs:
           npm run prettier-check
           npm run napi-64
           npm run napi-32
+          npm run test
+          npm run audit-check
+
+      - name: "Build (Win) Node 11 & 12"
+        if: matrix.os == 'windows-latest' && matrix.node-version < 14
+        run: |
+          npm --add-python-to-path='true' --debug --global --production windows-build-tools
+          npm ci
+          npm run tslint
+          npm run prettier-check
+          npx prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=electron@11.2.1 --arch=x64
+          npx prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=electron@11.2.1 --arch=ia32
+          npm run test
+          npm run audit-check
 
       - name: "Build & Test (OSX & Linux)"
         if: matrix.os != 'windows-latest'
