--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --exit",
     "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
-    "napi": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=node@14.17.3 --target=node@16.13.2 --target=electron@11.2.1",
-    "napi-64": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=node@14.17.3 --target=node@16.13.2 --target=electron@11.2.1 --arch=x64",
-    "napi-32": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=node@14.17.3 --target=node@16.13.2 --target=electron@11.2.1 --arch=ia32",
+    "napi": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=node@14.17.3 --target=node@16.13.2 --target=electron@11.2.1 --target=electron@17.0.0 ",
+    "napi-64": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=node@14.17.3 --target=node@16.13.2 --target=electron@11.2.1 --target=electron@17.0.0 --arch=x64",
+    "napi-32": "prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=node@14.17.3 --target=node@16.13.2 --target=electron@11.2.1 --target=electron@17.0.0 --arch=ia32",
     "upload-build": "node scripts/release-current-platform",
     "upload-binaries": "cross-env SKIP_TAR=true node scripts/release-current-platform",
     "install": "echo 'install without build'",
