--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "./tests/**/*"
   ],
   "exclude": [
-    "node_modules",
+    "node_modules/**/*",
+    "node_modules/@types/**/*",
     "coverage"
   ]
 }
