--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "strictNullChecks": false,
+    "skipLibCheck": true,
     "lib": [
       "es6"
     ],
