--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,89 +51,28 @@ jobs:
         with:
           submodules: recursive
 
-      - name: "Pre-Install hook Ubuntu"
-        if: matrix.os == 'ubuntu-18.04'
-        run: |
-          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-          sudo apt update
-          sudo apt install -y gcc-8 g++-8
-          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 60
-          sudo apt install libudev-dev
-
-      - name: "Install python2.7 on windows"
-        if: matrix.os == 'windows-latest'
-        uses: actions/setup-python@v2
-        with:
-          python-version: 2.7
-
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: "Build (Win)"
-        if: matrix.os == 'windows-latest' && matrix.node-version >= 14
-        run: |
-          npm --add-python-to-path='true' --debug --global --production windows-build-tools
-          npm ci
-          npm run tslint
-          npm run prettier-check
-          npm run napi-64
-          npm run napi-32
-          npm run test
-          npm run audit-check
+      - name: "Install dependencies"
+        run: npm ci
 
-      - name: "Build (Win) Node 11 & 12"
-        if: matrix.os == 'windows-latest' && matrix.node-version < 14
-        run: |
-          npm --add-python-to-path='true' --debug --global --production windows-build-tools
-          npm ci
-          npm run tslint
-          npm run prettier-check
-          npx prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=electron@11.2.1 --arch=x64
-          npx prebuildify --napi --debug --verbose --target=node@10.12.0 --target=node@12.4.0 --target=electron@11.2.1 --arch=ia32
-          npm run test
-          npm run audit-check
+      - name: "Check for linting issues"
+        run: npm run tslint
 
-      - name: "Build & Test (OSX & Linux)"
-        if: matrix.os != 'windows-latest'
-        run: |
-          npm ci
-          npm run tslint
-          npm run prettier-check
-          npm run build
-          npm test
-          npm run audit-check
+      - name: "Check for prettier issues"
+        run: npm run prettier-check
 
-      - name: "Extract and export RELEASE_VERSION"
-        if: success() && startsWith(github.ref, 'refs/tags/v')
-        shell: bash
-        run: |
-          export REF="${{github.ref}}"
-          echo "RELEASE_VERSION=${REF#refs/*/}" >> $GITHUB_ENV
+      - name: "Build library"
+        run: npm run build
 
-      - name: "Extract and export GITSHA"
-        if: success()
-        shell: bash
-        run: |
-          export GITSHA=$(git log --pretty=format:'%H' -n 1 .)
-          echo "GITSHA=${GITSHA}" >> $GITHUB_ENV
+      - name: "Run unt tests"
+        run: npm run test
 
-      - name: "Upload Binaries to azure"
-        if: success() && matrix.os == 'windows-latest'
-        env:
-          TAG: ${{ env.RELEASE_VERSION }}
-          GITSHA: ${{ env.GITSHA }}
-        shell: bash
-        run: npm run upload-binaries
-
-      - name: "Upload Binaries to azure"
-        if: success() && matrix.os != 'windows-latest'
-        env:
-          TAG: ${{ env.RELEASE_VERSION }}
-          GITSHA: ${{ env.GITSHA }}
-        run: npm run upload-build
-
+      - name: "Check for dependency vulnerabilities"
+        run: npm run audit-check
 
   slack-notify:
     name: "Notify Failure"
