--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ on:
   pull_request:
     branches:
       - '*'
-  schedule:
+  # schedule:
     # Trigger workflow run every workday (Mon-Fri) at 0700
-    - cron:  '0 7 * * 1,2,3,4,5'
+    # - cron:  '0 7 * * 1,2,3,4,5'
 
 jobs:
   build:
