--- a/package.json
+++ b/package.json
@@ -101,7 +101,11 @@
     "usb": "^2.1.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^8.2.2",
+    "@types/sinon": "^10.0.11",
+    "@types/sinon-chai": "^3.2.8",
     "azure-storage": "^2.10.6",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
@@ -109,6 +113,7 @@
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "mocha": "^9.2.0",
+    "mocha-param": "^2.0.1",
     "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.3.1",
