--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "publish-package": "npm run build && npm run manifest && npm publish",
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "test": "nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --exit",
+    "test": "tsc --declaration && nyc mocha -r ts-node/register --recursive \"tests/**/*.spec.ts\" --exit",
     "test-js": "mocha -r ts-node/register --recursive \"lib/tests/**/*.spec.js\"",
     "upload-build": "node scripts/release-current-platform",
     "upload-binaries": "cross-env SKIP_TAR=true node scripts/release-current-platform",
@@ -104,6 +104,7 @@
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^8.2.2",
+    "@types/rewire": "^2.5.28",
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
     "azure-storage": "^2.10.6",
@@ -117,6 +118,7 @@
     "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.3.1",
+    "rewire": "^6.0.0",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.1",
     "sinon-chai": "^3.7.0",
