--- a/package.json
+++ b/package.json
@@ -93,36 +93,36 @@
   },
   "dependencies": {
     "@huddly/sdk-interfaces": "^0.2.0",
-    "@types/node": "^15.12.2",
+    "@types/node": "^17.0.23",
     "await-sleep": "0.0.1",
     "chalk": "^4.1.2",
     "lodash.throttle": "^4.1.1",
-    "typescript": "^4.3.2",
-    "usb": "^2.1.2"
+    "usb": "^2.1.3"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^8.2.2",
+    "@types/mocha": "^9.1.0",
     "@types/rewire": "^2.5.28",
     "@types/sinon": "^10.0.11",
     "@types/sinon-chai": "^3.2.8",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "mocha": "^9.2.0",
+    "mocha": "^9.2.2",
     "mocha-param": "^2.0.1",
     "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.3.1",
+    "prettier": "^2.6.1",
     "rewire": "^6.0.0",
     "rimraf": "^3.0.2",
-    "sinon": "^11.1.1",
+    "sinon": "^13.0.1",
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.19",
-    "ts-node": "^10.0.0",
-    "tslint": "^6.1.1"
+    "ts-node": "^10.7.0",
+    "tslint": "^6.1.1",
+    "typescript": "^4.6.3"
   }
 }
