--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "await-sleep": "0.0.1",
     "chalk": "^4.1.2",
     "lodash.throttle": "^4.1.1",
-    "usb": "2.1.3"
+    "usb": "^2.9.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
